0.14/reference/modules_critics.md
# Value Networks and Critics

Value networks estimate the value of states or state-action pairs.

| [`ValueOperator`](generated/torchrl.modules.ValueOperator.html#torchrl.modules.ValueOperator)(*args, **kwargs) | General class for value functions in RL. |
| --- | --- |
| [`ValueNorm`](generated/torchrl.modules.ValueNorm.html#torchrl.modules.ValueNorm)(*[, shape, epsilon, device]) | Abstract base class for value normalisers. |
| [`PopArtValueNorm`](generated/torchrl.modules.PopArtValueNorm.html#torchrl.modules.PopArtValueNorm)(*[, shape, beta, epsilon, ...]) | PopArt-style EMA value normaliser. |
| [`RunningValueNorm`](generated/torchrl.modules.RunningValueNorm.html#torchrl.modules.RunningValueNorm)(*[, shape, epsilon, device]) | Exact running mean / variance (Welford's online algorithm). |
| [`PercentileValueNorm`](generated/torchrl.modules.PercentileValueNorm.html#torchrl.modules.PercentileValueNorm)(*[, shape, quantiles, ...]) | DreamerV3-style EMA percentile-range value normaliser. |
| [`DuelingCnnDQNet`](generated/torchrl.modules.DuelingCnnDQNet.html#torchrl.modules.DuelingCnnDQNet)(out_features[, ...]) | Dueling CNN Q-network. |
| [`DistributionalDQNnet`](generated/torchrl.modules.DistributionalDQNnet.html#torchrl.modules.DistributionalDQNnet)(*args, **kwargs) | Distributional Deep Q-Network softmax layer. |
| [`ConvNet`](generated/torchrl.modules.ConvNet.html#torchrl.modules.ConvNet)(in_features, depth, num_cells, ...) | A convolutional neural network. |
| [`CrossCriticGroupSpec`](generated/torchrl.modules.CrossCriticGroupSpec.html#torchrl.modules.CrossCriticGroupSpec)(obs_dim, n_agents, ...) | Specification for one agent group used by [`CrossGroupCritic`](generated/torchrl.modules.CrossGroupCritic.html#torchrl.modules.CrossGroupCritic). |
| [`CrossGroupCritic`](generated/torchrl.modules.CrossGroupCritic.html#torchrl.modules.CrossGroupCritic)(*args, **kwargs) | Centralised critic that conditions on observations from multiple agent groups. |
| [`MLP`](generated/torchrl.modules.MLP.html#torchrl.modules.MLP)(in_features, out_features, depth, ...) | A multi-layer perceptron. |
| [`DdpgCnnActor`](generated/torchrl.modules.DdpgCnnActor.html#torchrl.modules.DdpgCnnActor)(action_dim[, conv_net_kwargs, ...]) | DDPG Convolutional Actor class. |
| [`DdpgCnnQNet`](generated/torchrl.modules.DdpgCnnQNet.html#torchrl.modules.DdpgCnnQNet)([conv_net_kwargs, ...]) | DDPG Convolutional Q-value class. |
| [`DdpgMlpActor`](generated/torchrl.modules.DdpgMlpActor.html#torchrl.modules.DdpgMlpActor)(action_dim[, mlp_net_kwargs, ...]) | DDPG Actor class. |
| [`DdpgMlpQNet`](generated/torchrl.modules.DdpgMlpQNet.html#torchrl.modules.DdpgMlpQNet)([mlp_net_kwargs_net1, ...]) | DDPG Q-value MLP class. |
| [`LSTMModule`](generated/torchrl.modules.LSTMModule.html#torchrl.modules.LSTMModule)(*args, **kwargs) | An embedder for an LSTM module. |
| [`GRUModule`](generated/torchrl.modules.GRUModule.html#torchrl.modules.GRUModule)(*args, **kwargs) | An embedder for an GRU module. |
| [`canonicalize_rnn_subset`](generated/torchrl.modules.canonicalize_rnn_subset.html#torchrl.modules.canonicalize_rnn_subset)(data, modules, *[, ...]) | Canonicalize only the union of RNN keys used by `modules`. |
| [`set_recurrent_mode`](generated/torchrl.modules.set_recurrent_mode.html#torchrl.modules.set_recurrent_mode)([mode]) | Context manager for setting RNNs recurrent mode. |
| [`OnlineDTActor`](generated/torchrl.modules.OnlineDTActor.html#torchrl.modules.OnlineDTActor)(state_dim, action_dim[, ...]) | Online Decision Transformer Actor class. |
| [`DTActor`](generated/torchrl.modules.DTActor.html#torchrl.modules.DTActor)(state_dim, action_dim[, ...]) | Decision Transformer Actor class. |
| [`DecisionTransformer`](generated/torchrl.modules.DecisionTransformer.html#torchrl.modules.DecisionTransformer)(state_dim, action_dim[, ...]) | Online Decision Transformer. |

## Value transforms

Value transforms compress large reward and return scales into a numerically
convenient prediction space and provide the inverse mapping needed before
bootstrapping. They can be composed to build custom invertible mappings.

| [`ValueTransform`](generated/torchrl.modules.ValueTransform.html#torchrl.modules.ValueTransform)(*args, **kwargs) | Abstract base class for invertible scalar value transforms. |
| --- | --- |
| [`IdentityValueTransform`](generated/torchrl.modules.IdentityValueTransform.html#torchrl.modules.IdentityValueTransform)(*args, **kwargs) | Leave scalar values unchanged. |
| [`SymLogValueTransform`](generated/torchrl.modules.SymLogValueTransform.html#torchrl.modules.SymLogValueTransform)(*args, **kwargs) | Symmetric-log value transform used by DreamerV3. |
| [`SignedHyperbolicValueTransform`](generated/torchrl.modules.SignedHyperbolicValueTransform.html#torchrl.modules.SignedHyperbolicValueTransform)([epsilon]) | Signed-hyperbolic transform for large-magnitude value targets. |
| [`ComposeValueTransform`](generated/torchrl.modules.ComposeValueTransform.html#torchrl.modules.ComposeValueTransform)(*transforms) | Compose value transforms while preserving the inverse mapping. |
| [`functional.symlog`](generated/torchrl.modules.functional.symlog.html#torchrl.modules.functional.symlog)(value) | Apply the element-wise symmetric logarithm transform. |
| [`functional.symexp`](generated/torchrl.modules.functional.symexp.html#torchrl.modules.functional.symexp)(value) | Apply the inverse symmetric exponential transform element-wise. |
| [`functional.signed_hyperbolic`](generated/torchrl.modules.functional.signed_hyperbolic.html#torchrl.modules.functional.signed_hyperbolic)(value[, epsilon]) | Apply the signed hyperbolic value transform. |
| [`functional.signed_parabolic`](generated/torchrl.modules.functional.signed_parabolic.html#torchrl.modules.functional.signed_parabolic)(value[, epsilon]) | Apply the inverse of `signed_hyperbolic()` element-wise. |